<resources>
    <string name="app_name">Promotional Activity Monitoring</string>
    <string name="select_store">Select Customer</string>
    <string name="select_category">Select Category</string>
    <string name="do_continue">Continue</string>
    <string name="select_dates">Select dates</string>
    <string name="select_ending_date">Select Ending Date</string>
    <string name="select_starting_date">Select Starting Date</string>
    <string name="enter_comment_here">Enter promotional action here</string>
    <string name="take_photo">Take Photo</string>
    <string name="finish">Finish</string>
    <string name="enter_address_here">Enter address here</string>
    <string name="or_try_to_retrieve_it_automatically">Or try to retrieve it automatically</string>
    <string name="error_no_store_selected">You have to select a customer before continuing</string>
    <string name="error_no_category_selected">You have to select a category before continuing</string>
    <string name="error_no_dates_selected">You have to select both dates before continuing</string>
    <string name="error_start_date_after_end_date">Start date cannot be after the end date</string>
    <string name="error_no_comment_selected">You have to write a promotional action before continuing</string>
    <string name="error_no_address_selected">You have to write an address before continuing</string>
    <string name="error_invalid_characters_in_address">Address contains invalid characters:/\|?"*></string>
    <string name="error_invalid_characters_in_comment">Comment contains invalid characters:/\|?"*></string>
    <string name="error_no_location_permission">Cannot resolve address without permission to location data</string>
    <string name="error_no_photo_permission">Cannot save data without permission to write to the SD Card</string>
    <string name="error_retrieving_location">Error while retrieving location::/\|?"*></string>
    <string name="error_invalid_location_response">Provider did not give results, try opening an application that requests locations, like Google Maps</string>
    <string name="error_could_not_find_address">Unable to resolve address</string>
    <string name="image_received_by_camera">Image received by camera</string>
    <string name="error_no_camera">No camera application found</string>
    <string name="error_loading_file">There was a problem retrieving the file from the camera</string>
    <string name="error_create_file">Error, invalid characters :/\|?"*></string>
    <string name="error_no_sd_card">Could not locate SD Card</string>
    <string name="error_invalid_intent">Error while parsing input data</string>
    <string name="error_intent_store">Error while retrieving customer</string>
    <string name="error_intent_category">Error while retrieving category</string>
    <string name="error_intent_dates">Error while retrieving dates</string>
    <string name="error_intent_address">Error while retrieving address</string>
    <string name="error_intent_comment">Error while retrieving promotional action</string>
    <string name="error_create_directories">Unable to create file directories</string>
    <string name="error_no_photo_taken">You have to take a photo before saving</string>
    <string name="save">Save</string>
    <string name="restart">Restart</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="select_comment">Insert the Promotional Action</string>
    <string name="Select_address">Insert Address</string>
    <string name="select_photo">Take Photo</string>
    <string name="store">Customer</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="comment">Promotional Action</string>
    <string name="address">Address</string>
    <string name="photo">Photo</string>
    <string name="finalize">Check &amp; Finalize</string>
    <string name="file_created">File Created %1$s</string>
</resources>
